--- a/client/fields.jade
+++ b/client/fields.jade
@@ -721,8 +721,7 @@ template(name='array_view')
         div
         .ui.inline.small.header
             if icon
-                i.grey.icon(class=icon)
-                //- +i name=icon
+                +i name=icon
             if title
                 |#{title}
             else if label
