better looking product, start on immediate reservation direction, 5minute delivery

--- a/components/library.jade
+++ b/components/library.jade
@@ -38,7 +38,7 @@ template(name='shop')
                 //-     |market
                 +cloud filter='shop_item'
                 .scrolling
-                    .ui.centered.five.cards
+                    .ui.centered.five.stackable.cards
                         each shop_items
                             +shop_item
 template(name='shop_item')
