decent working confirm reservation, go back to product page, show reservations options if rentable, show active reservation on front, next next need reservation actions for buyer and seller like photo, notes and note alerts

--- a/components/rent.jade
+++ b/components/rent.jade
@@ -2,8 +2,13 @@ template(name='rentals')
     .ui.header 
         +i name='clock'
         |rentals
-    unless is_author
-        +view_rental
+    if active_reservation
+        with active_reservation
+            .ui.header active
+            .ui.header #{hour_duration} hrs
+            .ui.header $#{reservation_cost}
+    //- unless is_author
+    //-     +view_rental
     //- .ui.green.button.rent Rent
     .ui.celled.grid
         .seven.column.row
