--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,7 +1,7 @@
 template(name='nav')
     unless is_frontdesk
         //- .ui.borderless.attached.big.inverted.menu.topnav
-        .ui.attached.borderless.inverted.big.menu.topnav.blue
+        .ui.borderless.inverted.big.menu.fixed.topnav.blue
             //- a.toggle_sidebar.icon.item.sidebar_on
             //-     i.large.sidebar.icon
             if is_loading
@@ -12,10 +12,10 @@ template(name='nav')
                 //-     .item.header #{title}
                 a.header.icon.item(href='/' class="{{isActivePath '/'}}")
                     //- i.home.large.large.icon
-                    +i name='home-page' classes='ui avatar image'
-                a.icon.item(href='/dashboard' class="{{isActivePath '/dashboard'}}")
-                    //- i.dashboard.icon
-                    +i name='dashboard'
+                    +i name='shop' classes='ui avatar image'
+                //- a.icon.item(href='/dashboard' class="{{isActivePath '/dashboard'}}")
+                //-     //- i.dashboard.icon
+                //-     +i name='dashboard'
                 //- a.icon.item(href='/home' class="{{isActivePath '/home'}}")
                 //-     i.th.large.icon
                 //- a.icon.item(href='/users' class="{{isActivePath '/users'}}")
@@ -32,10 +32,10 @@ template(name='nav')
                 //-     //-     //- +i name='library'
                 //-     //-     i.library.icon
                 //-     //-     .mobile.hidden &nbsp; Library
-                //-     a.icon.item.set_event(href='/m/event' class="{{isActivePath '/m/event'}}" title='events')
-                //-         +i name='calendar'
-                        //- i.calendar.icon
-                        //- .mobile.hidden &nbsp; events
+                a.icon.item(href='/events' class="{{isActivePath '/events'}}" title='events')
+                    +i name='calendar'
+                    //- i.calendar.icon
+                    //- .mobile.hidden &nbsp; events
                     //- a.icon.item.set_meal(href='/m/meal' class="{{isActivePath '/m/meal'}}" title='food')
                     //-     //- +i name='food'
                     //-     i.food.icon
@@ -67,16 +67,18 @@ template(name='nav')
                             //-     //- i.big.mail.icon(class=mail_icon_class title="#{unread_count} Unread")
                             a.icon.item(href="/chat" class="{{isActivePath '/chat'}}" title='chat')
                                 +i name='chat'
-                            a.icon.item(href="/my_transactions" class="{{isActivePath '/my_transactions'}}" title='my transactions')
-                                +i name='ledger'
+                            //- a.icon.item(href="/my_transactions" class="{{isActivePath '/my_transactions'}}" title='my transactions')
+                            //-     +i name='ledger'
                                 //- i.list.icon
-                            if is_admin
-                                a.icon.item(href="/transactions" class="{{isActivePath '/transactions'}}" title='transactions')
-                                    +i name='cashbook'
+                            //- if is_admin
+                            //-     a.icon.item(href="/transactions" class="{{isActivePath '/transactions'}}" title='transactions')
+                            //-         +i name='cashbook'
                                     //- i.user.sheild.icon
-                            a.item(href="/credit" class="{{isActivePath '/credit'}}" title="#{currentUser.credit} credit")
-                                 +i name='wallet'
-                                 |#{currentUser.credit}
+                            //- a.item(href="/credit" class="{{isActivePath '/credit'}}" title="#{currentUser.credit} credit")
+                            //-      +i name='wallet'
+                            //-      |#{currentUser.credit}
+                            //- a.icon.item.new_item(href="#")
+                            //-     i.circular.plus.icon
                             //- a.item(href="/cart" class="{{isActivePath '/cart'}}" title='cart')
                             //-     |#{cart_amount}
                         if is_admin
@@ -118,7 +120,8 @@ template(name='footer')
         .ui.container.stackable.grid
             .eight.wide.column
                 with currentUser
-                    +textarea_edit key='notes' direct=true
+                    if is_dev
+                        +textarea_edit key='notes' direct=true
                     form(action='https://www.paypal.com/cgi-bin/webscr', method='post', target='_top')
                         input(type='hidden', name='cmd', value='_s-xclick')
                         input(type='hidden', name='hosted_button_id', value='AUVHGYNUW5LVE')
