--- a/client/styles.css
+++ b/client/styles.css
@@ -182,7 +182,9 @@ input.username_search{
     /* -moz-border-radius: 20px !important; */
     /* border-radius: 20px !important; */
 }
-
+.global_container.ui.grid {
+    margin-top: 15px !important;
+}
 
 .banner_image {
     /* opacity: 0.9; */
@@ -470,7 +472,7 @@ a {
 .scrolling{
 	overflow-y:scroll;
 	overflow-x:hidden;
-	max-height:100vh;
+	max-height:70vh;
 	/*max-height:85vh;*/
 	/* padding-top: 1em; */
 	/*padding-left: 1em;*/
