--- a/components/accounts/login.jade
+++ b/components/accounts/login.jade
@@ -2,10 +2,9 @@ template(name='login')
     .ui.padded.stackable.grid
         .centered.row
             .ten.wide.column
-                h1.ui.center.aligned.grey.header gro
-                    //- i.massive.icons
-                    //-     i.home.icon
-                    //-     i.corner.right.chevron.icon
+                .ui.center.aligned.big.header
+                    +i name='hand-planting' classes='ui inline small image'
+                    |gro login
                 if message
                     h4.ui.center.aligned.header #{message}
                 .ui.fluid.large.input(class=login_class)
@@ -21,7 +20,7 @@ template(name='login')
                 //- if username
                 if logging_in
                     .ui.fluid.big.basic.button.enter(title="login #{username}" class=enter_class)
-                        i.sign.in.alternate.icon
+                        //- i.sign.in.alternate.icon
                         +i name='enter-2' classes='ui mini inline image'
                         |login
                         | #{username}
@@ -31,7 +30,7 @@ template(name='login')
                         .ui.center.aligned.segment
                             .ui.small.header no '#{username}' user
                             a.ui.basic.button(href='/register')
-                                i.user.plus.icon
+                                //- i.user.plus.icon
                                 +i name='enter-2' classes='ui mini inline image'                    
                                 | register
                 .ui.center.aligned.basic.segment    
