--- a/components/library.jade
+++ b/components/library.jade
@@ -36,26 +36,29 @@ template(name='shop')
                 //-     //- i.shop.icon
                 //-     +i name='shop'
                 //-     |market
+                //- if is_dev
+                .ui.icon.button.new_item
+                    i.green.plus.icon
                 +cloud filter='shop_item'
                 .scrolling
                     .ui.centered.five.stackable.cards
                         each shop_items
                             +shop_item
 template(name='shop_item')
-    .ui.card.goto_shop_item_page
-        a(href="/shop/#{_id}/view")
-            img.ui.image(src="{{c.url image_id height=200 width=300 crop='lpad'}}")
+    //- .ui.card
+    a.ui.card.goto_shop_item_page(href="/shop/#{_id}/view")
+        img.ui.image(src="{{c.url image_id height=200 width=300 crop='lpad'}}")
         .content
-            a.header(href="/shop_item_page/#{_id}") #{title}
-            .ui.tiny.statistic
-                .value
-                    |$#{price}
-            .ui.list
-                .item #{views} views
-                .item #{sales} sales
-                .item #{positive_reviews} positive reviews
-                .item #{negative_reviews} negative reviews
-            
+            .header #{title}
+            .ui.small.header $#{price}
+            .ui.small.header #{when}
+            +remove_button
+            //- .ui.list
+                //- .item #{views} views
+                //- .item #{sales} sales
+                //- .item #{positive_reviews} positive reviews
+                //- .item #{negative_reviews} negative reviews
+                //- 
 template(name='shop_item_page')
     .ui.padded.stackable.grid.header-wrapper
         .row
